// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionListTop should render (with ENABLE_VISA_PROGRAM) 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "borderRadius": 16,
        },
        {
          "marginBottom": 22,
          "marginLeft": 11,
          "marginRight": 11,
          "marginTop": 11,
        },
        {
          "paddingBottom": 22,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 22,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, .1)",
          "borderRadius": 16,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 11,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "marginRight": 11,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 34,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "width": 34,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="50"
            bbWidth="50"
            focusable={false}
            height={50}
            meetOrSlice={0}
            minX={-8}
            minY={-8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "left": -8,
                  "position": "absolute",
                  "top": -8,
                  "transform": [
                    {
                      "rotateZ": "-90deg",
                    },
                  ],
                },
                {
                  "flex": 0,
                  "height": 50,
                  "width": 50,
                },
              ]
            }
            vbHeight={50}
            vbWidth={50}
            width={50}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx="17"
                cy="17"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                opacity={0}
                propList={
                  [
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeLinecap",
                  ]
                }
                r="19"
                stroke={
                  {
                    "payload": 4278251938,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "119.38052083641213",
                    "119.38052083641213",
                  ]
                }
                strokeLinecap={1}
                strokeWidth="4"
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <View
            style={
              {
                "backgroundColor": "#000000",
                "borderRadius": 17,
                "elevation": 0,
                "height": 34,
                "shadowColor": "#000000",
                "shadowOffset": {
                  "height": 3,
                  "width": -3,
                },
                "shadowOpacity": 0.6,
                "shadowRadius": 4,
                "width": 34,
              }
            }
          >
            <View
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                ]
              }
            >
              <FastImageView
                resizeMode="cover"
                source={
                  {
                    "uri": "https://content.edge.app/currencyIconsV3/bitcoin/bitcoin.png",
                  }
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "includeFontPadding": false,
              },
              {
                "flexShrink": 1,
                "fontSize": 28,
                "marginLeft": 11,
                "marginRight": 6,
              },
              null,
            ]
          }
        >
          wallet name
        </Text>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#00f1a2",
                "fontSize": 34,
              },
              undefined,
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-end",
            "opacity": 1,
          }
        }
        testID="gearIcon"
      >
        <Text
          accessibilityHint="Wallet settings"
          allowFontScaling={false}
          style={
            [
              {
                "color": "#00f1a2",
                "fontSize": 34,
              },
              undefined,
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        accessible={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.3}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "fontFamily": "Quicksand-Medium",
              "fontSize": 45,
            },
            null,
          ]
        }
      >
        0.00123123 BTC
      </Text>
      <Text
        accessible={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "fontSize": 28,
            },
            null,
          ]
        }
      >
        $0.00 USD
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginHorizontal": -22,
          "marginTop": 22,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "includeFontPadding": false,
              },
              {
                "color": "#00f1a2",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 22,
              },
              null,
            ]
          }
        >
          Receive
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "includeFontPadding": false,
              },
              {
                "color": "#00f1a2",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 22,
              },
              null,
            ]
          }
        >
          Send
        </Text>
      </View>
      <ActivityIndicator
        color="#00f1a2"
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingRight": 22,
          }
        }
      />
    </View>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "borderRadius": 16,
        },
        {
          "marginBottom": -11,
          "marginLeft": 11,
          "marginRight": 11,
          "marginTop": 22,
        },
        {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, .1)",
          "borderRadius": 16,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
          "padding": 11,
        }
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "height": 45,
              "margin": 11,
              "width": 45,
            },
          ]
        }
      >
        <FastImageView
          resizeMode="contain"
          source={
            {
              "uri": "https://content.edge.app/currencyIconsV3/bitcoin/bitcoin.png",
            }
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "marginLeft": 11,
            },
            null,
          ]
        }
      >
        Buy Prepaid Visa® Cards
      </Text>
    </View>
  </View>,
  <View
    style={
      [
        {
          "justifyContent": "center",
          "marginHorizontal": 22,
          "paddingBottom": 22,
        },
        null,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    />
    <Text
      adjustsFontSizeToFit={true}
      minimumFontScale={0.65}
      numberOfLines={1}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Quicksand-Regular",
            "fontSize": 22,
            "includeFontPadding": false,
          },
          {
            "fontFamily": "Quicksand-Medium",
          },
          null,
        ]
      }
    >
      Transactions
    </Text>
  </View>,
  <BVLinearGradient
    colors={
      [
        452984831,
        452984831,
      ]
    }
    endPoint={
      {
        "x": 1,
        "y": 0.5,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0.5,
      }
    }
    style={
      [
        {
          "alignSelf": "stretch",
          "height": 1,
        },
        {
          "marginBottom": 0,
          "marginLeft": 22,
          "marginRight": 0,
          "marginTop": 0,
        },
      ]
    }
  />,
]
`;

exports[`TransactionListTop should render 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "borderRadius": 16,
        },
        {
          "marginBottom": 22,
          "marginLeft": 11,
          "marginRight": 11,
          "marginTop": 11,
        },
        {
          "paddingBottom": 22,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 22,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, .1)",
          "borderRadius": 16,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 11,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "marginRight": 11,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "height": 34,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "width": 34,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="50"
            bbWidth="50"
            focusable={false}
            height={50}
            meetOrSlice={0}
            minX={-8}
            minY={-8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "left": -8,
                  "position": "absolute",
                  "top": -8,
                  "transform": [
                    {
                      "rotateZ": "-90deg",
                    },
                  ],
                },
                {
                  "flex": 0,
                  "height": 50,
                  "width": 50,
                },
              ]
            }
            vbHeight={50}
            vbWidth={50}
            width={50}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx="17"
                cy="17"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                opacity={0}
                propList={
                  [
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeLinecap",
                  ]
                }
                r="19"
                stroke={
                  {
                    "payload": 4278251938,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "119.38052083641213",
                    "119.38052083641213",
                  ]
                }
                strokeLinecap={1}
                strokeWidth="4"
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <View
            style={
              {
                "backgroundColor": "#000000",
                "borderRadius": 17,
                "elevation": 0,
                "height": 34,
                "shadowColor": "#000000",
                "shadowOffset": {
                  "height": 3,
                  "width": -3,
                },
                "shadowOpacity": 0.6,
                "shadowRadius": 4,
                "width": 34,
              }
            }
          >
            <View
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                ]
              }
            >
              <FastImageView
                resizeMode="cover"
                source={
                  {
                    "uri": "https://content.edge.app/currencyIconsV3/bitcoin/bitcoin.png",
                  }
                }
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "includeFontPadding": false,
              },
              {
                "flexShrink": 1,
                "fontSize": 28,
                "marginLeft": 11,
                "marginRight": 6,
              },
              null,
            ]
          }
        >
          wallet name
        </Text>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#00f1a2",
                "fontSize": 34,
              },
              undefined,
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-end",
            "opacity": 1,
          }
        }
        testID="gearIcon"
      >
        <Text
          accessibilityHint="Wallet settings"
          allowFontScaling={false}
          style={
            [
              {
                "color": "#00f1a2",
                "fontSize": 34,
              },
              undefined,
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Text
        accessible={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.3}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "fontFamily": "Quicksand-Medium",
              "fontSize": 45,
            },
            null,
          ]
        }
      >
        0.00123123 BTC
      </Text>
      <Text
        accessible={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "fontSize": 28,
            },
            null,
          ]
        }
      >
        $0.00 USD
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginHorizontal": -22,
          "marginTop": 22,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "includeFontPadding": false,
              },
              {
                "color": "#00f1a2",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 22,
              },
              null,
            ]
          }
        >
          Receive
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
      >
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "includeFontPadding": false,
              },
              {
                "color": "#00f1a2",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 22,
              },
              null,
            ]
          }
        >
          Send
        </Text>
      </View>
      <ActivityIndicator
        color="#00f1a2"
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingRight": 22,
          }
        }
      />
    </View>
  </View>,
  <View
    style={
      [
        {
          "justifyContent": "center",
          "marginHorizontal": 22,
          "paddingBottom": 22,
        },
        null,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    />
    <Text
      adjustsFontSizeToFit={true}
      minimumFontScale={0.65}
      numberOfLines={1}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Quicksand-Regular",
            "fontSize": 22,
            "includeFontPadding": false,
          },
          {
            "fontFamily": "Quicksand-Medium",
          },
          null,
        ]
      }
    >
      Transactions
    </Text>
  </View>,
  <BVLinearGradient
    colors={
      [
        452984831,
        452984831,
      ]
    }
    endPoint={
      {
        "x": 1,
        "y": 0.5,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0.5,
      }
    }
    style={
      [
        {
          "alignSelf": "stretch",
          "height": 1,
        },
        {
          "marginBottom": 0,
          "marginLeft": 22,
          "marginRight": 0,
          "marginTop": 0,
        },
      ]
    }
  />,
]
`;
